style(iFrameController): fix z-index overlap modal

--- a/src/film-database/components/iframe-controller/_iFrameController.scss
+++ b/src/film-database/components/iframe-controller/_iFrameController.scss
@@ -3,7 +3,7 @@
 
 .iFrameController {
   position: relative;
-  z-index: 9;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
